idf_component_register(SRCS 
                        "dap_main.c"
                        "dap_protocol.c"
                        "dap_hw.c"
                    INCLUDE_DIRS 
                        "."
                    REQUIRES 
                        "driver"
                    PRIV_REQUIRES
                        "espressif__tinyusb"
)
